# fip-agent-protocol

./: .gitignore  LICENSE  README.md  fip-agent.skill  pyproject.toml
docs/: AGENT-HUB.md  FEATURES.md  FEDERATION.md
examples/: basic_usage.py  multi_agent_swarm.py  reply_parsing.py  templates_and_schedules.py
fip/: __init__.py  client.py  models.py  reply_parser.py  schema.py
skill/: SKILL.md
skill/references/: message-types.md
skill/scripts/: fip_db.py  fip_enroll.py  fip_send.py  fip_status.py  setup_wizard.py
